--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 minversion = 7.0
 addopts = -ra -q --strict-markers --strict-config --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml
 testpaths = tests
+asyncio_mode = auto
 filterwarnings = 
     error
     ignore::UserWarning
