Add comprehensive tests for Enhanced ModelMuxer, monitoring, requests, and routing logic
- Implemented a new test suite for Enhanced ModelMuxer covering configuration, providers, routing, classification, caching, monitoring, middleware, and integration tests.
- Created dedicated tests for the monitoring and metrics system, including metrics collection and health checks.
- Developed a test script for the ModelMuxer LLM Router API, validating health checks, authentication, routing scenarios, streaming responses, and metrics endpoints.
- Added unit tests for the routing logic, including heuristic routing and cost tracking functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ ipython_config.py
 Pipfile.lock
 
 # poetry
-poetry.lock
+# poetry.lock should be committed for reproducible builds
 
 # pdm
 .pdm.toml
@@ -176,7 +176,7 @@ tmp/
 temp/
 *.tmp
 debug_*.py
-test_*.py
+# Note: test_*.py files should be committed, not ignored
 
 # Model files and embeddings
 models/
@@ -314,3 +314,5 @@ sbom.*.json
 compliance_reports/
 audit_reports/
 security_scans/
+
+.claude
