--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,11 @@
 [pytest]
 minversion = 7.0
 addopts = -ra -q --strict-markers --strict-config --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml
+env =
+    TESTING = true
 testpaths = tests
 asyncio_mode = auto
-filterwarnings = 
+filterwarnings =
     error
     ignore::UserWarning
     ignore::DeprecationWarning
