--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,144 @@
-# LLM Provider API Keys
+# =============================================================================
+# ModelMuxer Environment Configuration
+# =============================================================================
+# Copy this file to .env and update with your actual values
+# Never commit .env files with real credentials to version control
+
+# =============================================================================
+# LLM Provider API Keys (Required - at least one provider)
+# =============================================================================
 OPENAI_API_KEY=sk-your-openai-key-here
 ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
 MISTRAL_API_KEY=your-mistral-key-here
+GOOGLE_API_KEY=your-google-api-key-here
+GROQ_API_KEY=gsk_your-groq-key-here
+TOGETHER_API_KEY=your-together-api-key-here
+COHERE_API_KEY=your-cohere-api-key-here
 
-# Router Configuration
-DEFAULT_MODEL=gpt-3.5-turbo
-MAX_TOKENS_DEFAULT=1000
-TEMPERATURE_DEFAULT=0.7
-
-# Database
-DATABASE_URL=sqlite:///router_data.db
-
-# Security
-API_KEY_HEADER=Authorization
-ALLOWED_API_KEYS=sk-test-key-1,sk-test-key-2
-
+# =============================================================================
 # Server Configuration
+# =============================================================================
 HOST=0.0.0.0
 PORT=8000
 DEBUG=false
+WORKERS=4
+ENVIRONMENT=development
 
-# Cost Limits (USD)
+# =============================================================================
+# Database Configuration
+# =============================================================================
+# SQLite (Development)
+DATABASE_URL=sqlite:///./modelmuxer.db
+
+# PostgreSQL (Production)
+# DATABASE_URL=postgresql://user:password@localhost:5432/modelmuxer
+# DATABASE_POOL_SIZE=20
+# DATABASE_MAX_OVERFLOW=30
+
+# =============================================================================
+# Authentication & Security
+# =============================================================================
+# JWT Configuration
+JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
+JWT_ALGORITHM=HS256
+JWT_EXPIRY=3600
+
+# API Key Authentication
+API_KEYS=sk-test-key-1,sk-test-key-2
+AUTH_ENABLED=true
+REQUIRE_HTTPS=false
+
+# CORS Configuration
+CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
+CORS_METHODS=["GET","POST","PUT","DELETE"]
+CORS_HEADERS=["*"]
+
+# =============================================================================
+# Caching Configuration
+# =============================================================================
+CACHE_ENABLED=true
+CACHE_BACKEND=memory
+CACHE_DEFAULT_TTL=3600
+CACHE_MAX_SIZE=1000
+
+# Redis Configuration (if using Redis cache)
+# REDIS_URL=redis://localhost:6379/0
+# REDIS_PASSWORD=
+# REDIS_SSL=false
+
+# =============================================================================
+# Routing Configuration
+# =============================================================================
+DEFAULT_ROUTING_STRATEGY=hybrid
+CASCADE_ROUTING_ENABLED=true
+SEMANTIC_ROUTING_ENABLED=true
+HEURISTIC_ROUTING_ENABLED=true
+
+# Cascade Routing
+CASCADE_QUALITY_THRESHOLD=0.7
+CASCADE_CONFIDENCE_THRESHOLD=0.7
+CASCADE_MAX_BUDGET=0.1
+
+# Heuristic Routing
+CODE_DETECTION_THRESHOLD=0.2
+COMPLEXITY_THRESHOLD=0.2
+SIMPLE_QUERY_THRESHOLD=0.3
+SIMPLE_QUERY_MAX_LENGTH=100
+
+# Semantic Routing
+CLASSIFICATION_ENABLED=true
+CLASSIFICATION_MODEL=all-MiniLM-L6-v2
+SIMILARITY_THRESHOLD=0.7
+CACHE_EMBEDDINGS=true
+
+# =============================================================================
+# Cost Management
+# =============================================================================
 DEFAULT_DAILY_BUDGET=10.0
 DEFAULT_MONTHLY_BUDGET=100.0
+COST_TRACKING_ENABLED=true
+BUDGET_ALERTS_ENABLED=true
+
+# =============================================================================
+# Rate Limiting
+# =============================================================================
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REQUESTS_PER_MINUTE=60
+RATE_LIMIT_REQUESTS_PER_HOUR=1000
+RATE_LIMIT_REQUESTS_PER_DAY=10000
+
+# =============================================================================
+# Monitoring & Observability
+# =============================================================================
+MONITORING_ENABLED=true
+METRICS_ENABLED=true
+PROMETHEUS_PORT=9090
+HEALTH_CHECK_ENABLED=true
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+ENABLE_CORRELATION_ID=true
+ENABLE_REQUEST_LOGGING=true
+
+# =============================================================================
+# Model Configuration
+# =============================================================================
+DEFAULT_MODEL=gpt-4o-mini
+MAX_TOKENS_DEFAULT=1000
+TEMPERATURE_DEFAULT=0.7
+
+# =============================================================================
+# Enterprise Features (Optional)
+# =============================================================================
+# Multi-tenancy
+MULTI_TENANCY_ENABLED=false
+DEFAULT_ORGANIZATION_ID=default
+
+# PII Protection
+PII_PROTECTION_ENABLED=false
+PII_ENCRYPTION_KEY=your-pii-encryption-key-here
+
+# Advanced Security
+ENCRYPTION_KEY=your-encryption-key-here
+AUDIT_LOGGING_ENABLED=false
