--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,12 +53,14 @@ tiktoken = "^0.5.2"
 tenacity = "^8.2.0"
 cachetools = "^5.3.0"
 psutil = "^5.9.0"
-pyjwt = { extras = ["cryptography"], version = "^2.10.1" }
+pyjwt = { extras = ["cryptography"], version = "^2.10.4" }
 # Enterprise features
 asyncpg = "^0.30.0"
-cryptography = "^44.0.1"
+cryptography = "^44.0.2"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 email-validator = "^2.1.0"
+# Security fixes for vulnerabilities
+ecdsa = "^0.19.0"  # Fixes python-ecdsa timing attack vulnerability
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -81,7 +83,7 @@ flake8 = "^6.0.0"
 optional = true
 
 [tool.poetry.group.ml.dependencies]
-torch = "^2.0.0"
+torch = "^2.4.0"
 transformers = "^4.30.0"
 datasets = "^2.14.0"
 
