feat: Remove staging deployment workflow and add license compliance and testing workflows
- Deleted the `deploy-staging.yml` workflow to streamline deployment processes.
- Introduced `license-compliance.yaml` for automated license checks on pushes and pull requests.
- Added `test.yaml` for comprehensive testing, including linting, unit tests, security scans, and performance tests.
- Updated `.gitignore` to exclude sensitive files.
- Created `docker-compose.yaml` for local development setup.
- Added Prometheus configuration files for monitoring and alerting.

--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,8 @@ config/production.yaml
 api_keys.json
 credentials.json
 secrets/
+.github/secrets.yml
+.github/secrets.yaml
 
 # Temporary files
 tmp/
