feat: Enhance security configurations and add Snyk policy file; update environment examples for secure practices

--- a/.env.example
+++ b/.env.example
@@ -31,15 +31,17 @@ ENVIRONMENT=development
 DATABASE_URL=sqlite:///./modelmuxer.db
 
 # PostgreSQL (Production)
-# DATABASE_URL=postgresql://user:password@localhost:5432/modelmuxer
+# SNYK: Example connection string - replace with secure credentials
+# DATABASE_URL=postgresql://username:SECURE_PASSWORD@localhost:5432/modelmuxer
 # DATABASE_POOL_SIZE=20
 # DATABASE_MAX_OVERFLOW=30
 
 # =============================================================================
 # Authentication & Security
 # =============================================================================
-# JWT Configuration
-JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
+# JWT Configuration - SECURITY CRITICAL
+# SNYK: Example values only - replace with secure values in production
+JWT_SECRET_KEY=REPLACE-WITH-SECURE-32-CHAR-SECRET-KEY-IN-PRODUCTION
 JWT_ALGORITHM=HS256
 JWT_EXPIRY=3600
 
@@ -62,9 +64,11 @@ CACHE_DEFAULT_TTL=3600
 CACHE_MAX_SIZE=1000
 
 # Redis Configuration (if using Redis cache)
+# SNYK: Use secure SSL configuration in production
 # REDIS_URL=redis://localhost:6379/0
-# REDIS_PASSWORD=
-# REDIS_SSL=false
+# REDIS_PASSWORD=your-redis-password-here
+# REDIS_SSL=true  # Always use SSL in production
+# REDIS_TLS_VERIFY=true
 
 # =============================================================================
 # Routing Configuration
