--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,6 @@ redis = "^5.0.0"
 sqlalchemy = "^2.0.0"
 alembic = "^1.12.0"
 aiosqlite = "^0.21.0"
-sentence-transformers = "^3.1.0"
-numpy = "^1.24.0"
-scikit-learn = "^1.3.0"
-prometheus-client = "^0.19.0"
 structlog = "^23.2.0"
 tiktoken = "^0.5.2"
 tenacity = "^8.2.0"
@@ -71,26 +67,35 @@ black = "^24.3.0"
 ruff = "^0.1.0"
 mypy = "^1.7.0"
 pre-commit = "^3.5.0"
-ipython = "^8.0.0"
-jupyter = "^1.0.0"
 bandit = "^1.7.5"
 safety = "^2.3.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
 pip-audit = "^2.6.0"
 
+[tool.poetry.group.jupyter]
+optional = true
+
+[tool.poetry.group.jupyter.dependencies]
+ipython = "^8.0.0"
+jupyter = "^1.0.0"
+
 [tool.poetry.group.ml]
 optional = true
 
 [tool.poetry.group.ml.dependencies]
-torch = "^2.5.0"
+sentence-transformers = "^3.1.0"
+torch = ">=2.7.1,<3.0.0"
 transformers = "^4.30.0"
 datasets = "^2.14.0"
+numpy = "^1.24.0"
+scikit-learn = "^1.3.0"
 
 [tool.poetry.group.monitoring]
 optional = true
 
 [tool.poetry.group.monitoring.dependencies]
+prometheus-client = "^0.19.0"
 opentelemetry-api = "^1.20.0"
 opentelemetry-sdk = "^1.20.0"
 opentelemetry-instrumentation-fastapi = "^0.41b0"
