--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -22,10 +22,16 @@ RUN apt-get update && apt-get install -y \
 # Install Poetry for dependency management
 RUN pip install --no-cache-dir poetry==1.7.1
 
-# Configure Poetry
+# Configure Poetry to create virtual environment in project
 ENV POETRY_NO_INTERACTION=1 \
     POETRY_VENV_IN_PROJECT=1 \
+    POETRY_VIRTUALENVS_CREATE=1 \
+    POETRY_VIRTUALENVS_IN_PROJECT=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache
+
+# Configure Poetry settings explicitly
+RUN poetry config virtualenvs.create true && \
+    poetry config virtualenvs.in-project true
 
 # Set working directory
 WORKDIR /app
@@ -33,8 +39,11 @@ WORKDIR /app
 # Copy dependency files
 COPY pyproject.toml poetry.lock* ./
 
-# Install dependencies
-RUN poetry install --without dev,ml,monitoring --no-root && rm -rf $POETRY_CACHE_DIR
+# Install dependencies and create virtual environment
+RUN poetry install --without dev,ml,monitoring --no-root && \
+    rm -rf $POETRY_CACHE_DIR && \
+    # Verify .venv was created
+    ls -la /app/.venv/
 
 # Stage 2: Runtime image
 FROM python:3.11-slim AS runtime
@@ -74,6 +83,11 @@ WORKDIR /app
 # Copy virtual environment from builder stage
 COPY --from=builder /app/.venv /app/.venv
 ENV PATH="/app/.venv/bin:$PATH"
+
+# Verify virtual environment was copied correctly
+RUN ls -la /app/.venv/ && \
+    python --version && \
+    which python
 
 # Copy application code
 COPY --chown=modelmuxer:modelmuxer . .
