Refactor code for improved readability and consistency
- Updated constructor calls in various provider classes to use multi-line formatting for better readability.
- Enhanced error handling in provider classes to maintain consistent formatting in exception messages.
- Refactored message preparation logic in several provider classes for clarity.
- Improved health check methods in provider classes to follow consistent formatting.
- Cleaned up routing classes by applying consistent formatting and improving readability in method definitions.
- Enhanced logging messages in the SecurityManager class for better clarity.
- Updated configuration handling in the SecurityConfig class for improved readability.
- Refactored PII protection methods for consistency in method signatures.
- Improved test cases for provider configuration to ensure clarity and prevent .env file loading issues.

--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -133,7 +133,7 @@ jobs:
         run: |
           kubectl run migration-job-$(date +%s) \
             --namespace=${{ env.KUBE_NAMESPACE }} \
-            --image=ghcr.io/${{ github.repository }}:${{ github.event.inputs.image_tag || 'develop' }} \
+            --image=ghcr.io/${{ github.repository_owner }}/modelmuxer:${{ github.event.inputs.image_tag || 'develop' }} \
             --restart=Never \
             --env="DATABASE_URL=postgresql://postgres:${{ secrets.POSTGRES_PASSWORD }}@postgresql-staging:5432/modelmuxer" \
             --command -- python -m alembic upgrade head
@@ -162,7 +162,7 @@ jobs:
           # Run basic API tests against staging
           kubectl run smoke-test-$(date +%s) \
             --namespace=${{ env.KUBE_NAMESPACE }} \
-            --image=ghcr.io/${{ github.repository }}:${{ github.event.inputs.image_tag || 'develop' }} \
+            --image=ghcr.io/${{ github.repository_owner }}/modelmuxer:${{ github.event.inputs.image_tag || 'develop' }} \
             --restart=Never \
             --env="API_BASE_URL=http://${{ env.HELM_RELEASE }}:8000" \
             --env="ENVIRONMENT=staging" \
