chore: Add Snyk CLI installation to build workflow; update Poetry dependencies for machine learning support in test workflow; enhance licensing comments in cache modules

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -116,6 +116,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install Snyk CLI
+      run: npm install -g snyk
+
     - name: Authenticate with Snyk
       run: snyk auth ${{ secrets.SNYK_TOKEN }}
       env:
