--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -130,7 +130,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         image: ${{ needs.build.outputs.image-name }}:latest
-        args: --severity-threshold=high --file=Dockerfile.production
+        args: --severity-threshold=high --file=Dockerfile.production --exclude-app-vulns
 
     - name: Upload Snyk results to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
