--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -237,7 +237,7 @@ jobs:
 
       - name: Run safety check
         run: |
-          poetry run safety check --json --output safety-report.json || true
+          poetry run safety check --output json > safety-report.json || true
           poetry run safety check
 
       - name: Run pip-audit
