--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ optional = true
 
 [tool.poetry.group.ml.dependencies]
 sentence-transformers = "^3.1.0"
-torch = ">=2.6.0,<3.0.0"
+torch = "~2.6.0"
 transformers = "^4.30.0"
 datasets = "^2.14.0"
 numpy = "^1.24.0"
