--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "modelmuxer"
 version = "1.0.0"
 description = "Enterprise-grade intelligent LLM routing engine for cost and performance optimization"
 authors = ["Ajay Rajput <ajay@modelmuxer.com>"]
-license = "Business Source License 1.1"
+license = "BSL-1.1"
 readme = "README.md"
 homepage = "https://github.com/ajayrajput/modelmuxer"
 repository = "https://github.com/ajayrajput/modelmuxer"
@@ -85,7 +85,7 @@ optional = true
 
 [tool.poetry.group.ml.dependencies]
 sentence-transformers = "^3.1.0"
-torch = "~2.6.0"
+torch = ">=2.7.1"
 transformers = "^4.30.0"
 datasets = "^2.14.0"
 numpy = "^1.24.0"
