--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,10 +5,10 @@ name: Build & Push Docker Images
 
 on:
   push:
-    branches: [ main, develop ]
-    tags: [ 'v*' ]
+    branches: [main, develop]
+    tags: ["v*"]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   REGISTRY: ghcr.io
@@ -29,80 +29,80 @@ jobs:
       image-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Container Registry
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Build and push Docker image
-      id: build
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile.alpine
-        platforms: linux/amd64,linux/arm64
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        build-args: |
-          VERSION=${{ steps.meta.outputs.version }}
-          BUILD_DATE=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
-          VCS_REF=${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        provenance: true
-        sbom: true
+      - name: Build and push Docker image
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.alpine
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VERSION=${{ steps.meta.outputs.version }}
+            BUILD_DATE=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
+            VCS_REF=${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: true
+          sbom: true
 
-    - name: Run Trivy vulnerability scanner on image
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
-        format: 'sarif'
-        output: 'trivy-image-results.sarif'
+      - name: Run Trivy vulnerability scanner on image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
+          format: "sarif"
+          output: "trivy-image-results.sarif"
 
-    - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: 'trivy-image-results.sarif'
+      - name: Upload Trivy scan results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: "trivy-image-results.sarif"
 
-    - name: Generate SBOM
-      uses: anchore/sbom-action@v0
-      with:
-        image: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
-        format: spdx-json
-        output-file: sbom.spdx.json
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
+        with:
+          image: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
+          format: spdx-json
+          output-file: sbom.spdx.json
 
-    - name: Upload SBOM
-      uses: actions/upload-artifact@v4
-      with:
-        name: sbom
-        path: sbom.spdx.json
+      - name: Upload SBOM
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: sbom.spdx.json
 
   security-scan:
     name: Container Security Scan
@@ -113,31 +113,31 @@ jobs:
       contents: read
       security-events: write
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Snyk CLI
-      run: npm install -g snyk
+      - name: Install Snyk CLI
+        run: npm install -g snyk
 
-    - name: Authenticate with Snyk
-      run: snyk auth ${{ secrets.SNYK_TOKEN }}
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Authenticate with Snyk
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-    - name: Run Snyk to check Docker image for vulnerabilities
-      uses: snyk/actions/docker@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        image: ${{ needs.build.outputs.image-name }}:latest
-        args: --severity-threshold=high --file=Dockerfile.alpine --exclude-app-vulns
+      - name: Run Snyk to check Docker image for vulnerabilities
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          image: ${{ needs.build.outputs.image-name }}:latest
+          args: --severity-threshold=high --file=Dockerfile.alpine --exclude-app-vulns
 
-    - name: Upload Snyk results to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v3
-      if: always() && hashFiles('snyk.sarif') != ''
-      with:
-        sarif_file: snyk.sarif
-        category: snyk-container-scan
+      - name: Upload Snyk results to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        if: always() && hashFiles('snyk.sarif') != ''
+        with:
+          sarif_file: snyk.sarif
+          category: snyk-container-scan
 
   sign-image:
     name: Sign Container Image
@@ -150,29 +150,29 @@ jobs:
       id-token: write
 
     steps:
-    - name: Install Cosign
-      uses: sigstore/cosign-installer@v3
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3
 
-    - name: Log in to Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Sign container image
-      run: |
-        IMAGE_REF="${{ needs.build.outputs.image-name }}@${{ needs.build.outputs.image-digest }}"
-        echo "Signing image: $IMAGE_REF"
-        cosign sign --yes "$IMAGE_REF"
+      - name: Sign container image
+        run: |
+          IMAGE_REF="${{ needs.build.outputs.image-name }}@${{ needs.build.outputs.image-digest }}"
+          echo "Signing image: $IMAGE_REF"
+          cosign sign --yes "$IMAGE_REF"
 
-    - name: Verify signature
-      run: |
-        IMAGE_REF="${{ needs.build.outputs.image-name }}@${{ needs.build.outputs.image-digest }}"
-        echo "Verifying signature for: $IMAGE_REF"
-        cosign verify "$IMAGE_REF" \
-          --certificate-identity-regexp="https://github.com/${{ github.repository }}" \
-          --certificate-oidc-issuer="https://token.actions.githubusercontent.com"
+      - name: Verify signature
+        run: |
+          IMAGE_REF="${{ needs.build.outputs.image-name }}@${{ needs.build.outputs.image-digest }}"
+          echo "Verifying signature for: $IMAGE_REF"
+          cosign verify "$IMAGE_REF" \
+            --certificate-identity-regexp="https://github.com/${{ github.repository }}" \
+            --certificate-oidc-issuer="https://token.actions.githubusercontent.com"
 
   notify:
     name: Notify Build Status
@@ -180,65 +180,66 @@ jobs:
     needs: [build, security-scan, sign-image]
     if: always()
     steps:
-    - name: Notify Slack on success
-      if: needs.build.result == 'success'
-      uses: 8398a7/action-slack@v3
-      with:
-        status: success
-        text: |
-          ✅ Docker image built and pushed successfully
-          Image: ${{ needs.build.outputs.image-name }}:latest
-          Commit: ${{ github.sha }}
-          Branch: ${{ github.ref_name }}
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Notify Slack on success
+        if: needs.build.result == 'success'
+        uses: 8398a7/action-slack@v3
+        with:
+          status: success
+          text: |
+            ✅ Docker image built and pushed successfully
+            Image: ${{ needs.build.outputs.image-name }}:latest
+            Commit: ${{ github.sha }}
+            Branch: ${{ github.ref_name }}
+            [View Workflow Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-    - name: Notify Slack on failure
-      if: needs.build.result == 'failure'
-      uses: 8398a7/action-slack@v3
-      with:
-        status: failure
-        text: |
-          ❌ Docker image build failed
-          Commit: ${{ github.sha }}
-          Branch: ${{ github.ref_name }}
-          Workflow: ${{ github.workflow }}
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Notify Slack on failure
+        if: needs.build.result == 'failure'
+        uses: 8398a7/action-slack@v3
+        with:
+          status: failure
+          text: |
+            ❌ Docker image build failed
+            Commit: ${{ github.sha }}
+            Branch: ${{ github.ref_name }}
+            Workflow: ${{ github.workflow }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-    - name: Create GitHub Release
-      if: startsWith(github.ref, 'refs/tags/v') && needs.build.result == 'success'
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        body: |
-          ## Changes in this Release
-          
-          ### Docker Image
-          - **Image**: ${{ needs.build.outputs.image-name }}:latest
-          - **Digest**: ${{ needs.build.outputs.image-digest }}
-          - **Signed**: ✅ (Cosign)
-          
-          ### Security
-          - Container vulnerability scan: ✅
-          - SBOM generated: ✅
-          - Image signed with Cosign: ✅
-          
-          ### Deployment
-          ```bash
-          # Pull the image
-          docker pull ${{ needs.build.outputs.image-name }}:latest
-          
-          # Verify signature
-          cosign verify ${{ needs.build.outputs.image-name }}@${{ needs.build.outputs.image-digest }} \
-            --certificate-identity-regexp="https://github.com/${{ github.repository }}" \
-            --certificate-oidc-issuer="https://token.actions.githubusercontent.com"
-          
-          # Deploy with kubectl (using Kubernetes manifests)
-          kubectl apply -f infra/k8s/
-          ```
-        draft: false
-        prerelease: ${{ contains(github.ref_name, '-') }}
+      - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/v') && needs.build.result == 'success'
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          body: |
+            ## Changes in this Release
+
+            ### Docker Image
+            - **Image**: ${{ needs.build.outputs.image-name }}:latest
+            - **Digest**: ${{ needs.build.outputs.image-digest }}
+            - **Signed**: ✅ (Cosign)
+
+            ### Security
+            - Container vulnerability scan: ✅
+            - SBOM generated: ✅
+            - Image signed with Cosign: ✅
+
+            ### Deployment
+            ```bash
+            # Pull the image
+            docker pull ${{ needs.build.outputs.image-name }}:latest
+
+            # Verify signature
+            cosign verify ${{ needs.build.outputs.image-name }}@${{ needs.build.outputs.image-digest }} \
+              --certificate-identity-regexp="https://github.com/${{ github.repository }}" \
+              --certificate-oidc-issuer="https://token.actions.githubusercontent.com"
+
+            # Deploy with kubectl (using Kubernetes manifests)
+            kubectl apply -f infra/k8s/
+            ```
+          draft: false
+          prerelease: ${{ contains(github.ref_name, '-') }}
