Refactor test methods to include type hints for improved clarity and consistency
- Added type hints to all test methods across various test files, enhancing code readability and maintainability.
- Updated method signatures in test classes for API key authentication, caching, cost tracking, enhanced configuration, and monitoring.
- Ensured all async methods and setup/teardown methods have appropriate return types.

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,7 +1,7 @@
 # ModelMuxer Alpine Production Dockerfile - Security-focused build with minimal attack surface
 
 # Stage 1: Build dependencies and compile Python packages
-FROM python:3.12-alpine AS builder
+FROM python:3.13-alpine3.20 AS builder
 
 # Set build arguments
 ARG BUILDPLATFORM
@@ -50,8 +50,8 @@ RUN poetry install --without dev,ml,monitoring --no-root && \
     # Verify .venv was created
     ls -la /app/.venv/
 
-# Stage 2: Runtime image
-FROM python:3.13-alpine AS runtime
+# Stage 2: Runtime image - Use latest Alpine with security patches
+FROM python:3.13-alpine3.20 AS runtime
 
 # Set build arguments for metadata
 ARG VERSION=latest
@@ -73,10 +73,12 @@ LABEL maintainer="Ajay Rajput" \
     org.opencontainers.image.licenses="BSL-1.1"
 
 # Install runtime dependencies only - minimal set for Alpine
+# Remove SQLite if present to address security vulnerability
 RUN apk add --no-cache \
     curl \
     ca-certificates \
     tzdata \
+    && apk del sqlite sqlite-libs 2>/dev/null || true \
     && rm -rf /var/cache/apk/*
 
 # Create non-root user for security
