--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ safety = "^2.3.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
 pip-audit = "^2.6.0"
+types-psutil = "^7.0.0.20250801"
 
 [tool.poetry.group.jupyter]
 optional = true
