feat: Add Bandit security linting configuration and update test cases for async compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,8 @@ sbom.*.json
 compliance_reports/
 audit_reports/
 security_scans/
+
+# Security and test reports
+bandit-report.json
+*.bandit-report
+security-report.*
