--- a/Dockerfile.apple
+++ b/Dockerfile.apple
@@ -12,9 +12,9 @@ ENV PYTHONUNBUFFERED=1 \
 
 # Apple Container specific labels
 LABEL maintainer="ModelMuxer Team" \
-      version="1.0.0" \
-      description="ModelMuxer LLM Router optimized for Apple Container" \
-      apple.container.optimized="true"
+    version="1.0.0" \
+    description="modelmuxer LLM Router optimized for Apple Container" \
+    apple.container.optimized="true"
 
 # Install system dependencies with Apple Silicon optimizations
 RUN apt-get update && apt-get install -y \
@@ -65,8 +65,8 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 
 # Apple Container specific metadata
 LABEL apple.container.runtime="python" \
-      apple.container.port="8000" \
-      apple.container.healthcheck="true"
+    apple.container.port="8000" \
+    apple.container.healthcheck="true"
 
 # Run the application with Apple Container optimizations
 CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
