--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "modelmuxer"
 version = "1.0.0"
 description = "Enterprise-grade intelligent LLM routing engine for cost and performance optimization"
 authors = ["Ajay Rajput <ajay@modelmuxer.com>"]
-license = "BSL-1.1"
+license = "Business Source License 1.1"
 readme = "README.md"
 homepage = "https://github.com/ajayrajput/modelmuxer"
 repository = "https://github.com/ajayrajput/modelmuxer"
