--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ name: Build & Push Docker Images
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, dev]
     tags: ["v*"]
   pull_request:
     branches: [main]
