--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,13 @@ temp_*
 *.temp
 # Note: test_*.py files should be committed, not ignored
 
+# Augment AI temporary files (Task 4.1 - Development Workflow)
+*_augment.md
+*_local.md
+*_temp.md
+*_draft.md
+*_notes.md
+
 # Model files and embeddings
 models/
 embeddings/
@@ -327,6 +334,19 @@ audit_reports/
 security_scans/
 
 # Security and test reports
-bandit-report.json
+bandit-report*.json
 *.bandit-report
 security-report.*
+
+# Development chronicles and temporary documentation
+CI_CD_FIXES_SUMMARY.md
+COMPLETE_IMPLEMENTATION_CHRONICLE.md
+CLAUDE.md
+*_CHRONICLE.md
+*_SUMMARY.md
+*_FIXES.md
+
+# Podman-related files (removed from project)
+podman-compose.yaml
+podman-compose.yml
+*podman*
