--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ isort = "^5.12.0"
 flake8 = "^6.0.0"
 pip-audit = "^2.6.0"
 types-psutil = "^7.0.0.20250801"
+interrogate = "^1.7.0"
 
 [tool.poetry.group.jupyter]
 optional = true
