--- a/.github/markdown-link-check-config.json
+++ b/.github/markdown-link-check-config.json
@@ -14,6 +14,18 @@
     },
     {
       "pattern": "^mailto:"
+    },
+    {
+      "pattern": "^https://platform.openai.com"
+    },
+    {
+      "pattern": "^https://console.anthropic.com"
+    },
+    {
+      "pattern": "^https://console.mistral.ai"
+    },
+    {
+      "pattern": "^https://docs.anthropic.com"
     }
   ],
   "replacementPatterns": [
